# usq_pc1

./: .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  Kconfig  README.md  ReadMe.md  pc1.overlay  prj.conf  prj_debug.conf  terpsichore.overlay  west.yml
.devcontainer/: devcontainer.json
boards/arm/fkmg_terpsichore/: Kconfig.fkmg_terpsichore  board.yml  fkmg_terpsichore.dts  fkmg_terpsichore.yaml  fkmg_terpsichore_defconfig
boards/arm/fkmg_terpsichore/doc/: index.rst
boards/arm/fkmg_usq_pc1/: Kconfig.fkmg_pc1  board.cmake  board.yml  fkmg_pc1.yaml
boards/arm/fkmg_usq_pc1/doc/: index.rst
boards/dts/bindings/dac/: ti,dac7578.yaml
doc/: modes.txt
scripts/: linker-0-inc.ld  linker-1-inc.ld  snippets-vectors.ld
src/: main.c
